# logicutils

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/agents/: README.md  architecture.md  cli-protocol.md  extending.md  kb-language.md  recipes.md
docs/agents/utilities/: freshcheck.md  lu-deps.md  lu-expand.md  lu-match.md  lu-multi.md  lu-par.md  lu-query.md  lu-queue.md  lu-rule.md  stamp.md
docs/learning/de/: logicutils.typ
docs/learning/en/: logicutils.typ
docs/learning/ja/: logicutils.typ
docs/learning/ko/: logicutils.typ
docs/man/: freshcheck.1  lu-deps.1  lu-expand.1  lu-kb.5  lu-match.1  lu-multi.1  lu-par.1  lu-query.1  lu-queue.1  lu-rule.1  stamp.1
freshcheck/: Cargo.toml
freshcheck/src/: lib.rs  main.rs
lu-common/: Cargo.toml
lu-common/src/: exit.rs  format.rs  hash.rs  lib.rs  store.rs
lu-common/src/kb/: ast.rs  lexer.rs  mod.rs  parser.rs
lu-deps/: Cargo.toml
lu-deps/src/: lib.rs  main.rs
lu-expand/: Cargo.toml
lu-expand/src/: lib.rs  main.rs
lu-match/: Cargo.toml
lu-match/src/: lib.rs  main.rs
lu-multi/: Cargo.toml
lu-multi/src/: main.rs
lu-par/: Cargo.toml
lu-par/src/: lib.rs  main.rs
lu-query/: Cargo.toml
lu-query/src/: engine.rs  lib.rs  main.rs
lu-queue/: Cargo.toml
lu-queue/src/: lib.rs  main.rs
lu-rule/: Cargo.toml
lu-rule/src/: lib.rs  main.rs
packaging/archlinux/: .SRCINFO  PKGBUILD  README.md
packaging/archlinux/logicutils-git/: .SRCINFO  PKGBUILD
packaging/archlinux/logicutils-hpc/: .SRCINFO  PKGBUILD
packaging/archlinux/logicutils-hpc-git/: .SRCINFO  PKGBUILD
packaging/archlinux/logicutils-multi/: .SRCINFO  PKGBUILD
packaging/archlinux/logicutils-multi-git/: .SRCINFO  PKGBUILD
stamp/: Cargo.toml
stamp/src/: lib.rs  main.rs
