[workspace]
resolver = "3"
members = [
    "lu-common",
    "freshcheck",
    "stamp",
    "lu-match",
    "lu-expand",
    "lu-query",
    "lu-rule",
    "lu-queue",
    "lu-par",
    "lu-deps",
    "lu-multi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/logicutils/logicutils"

[workspace.dependencies]
lu-common = { path = "lu-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
crc32fast = "1"
toml = "0.8"
csv = "1"
thiserror = "2"
glob = "0.3"
