[workspace]
resolver = "3"
members = [
    "lu-common",
    "freshcheck",
    "stamp",
    "lu-match",
    "lu-expand",
    "lu-query",
    "lu-rule",
    "lu-queue",
    "lu-par",
    "lu-deps",
    "lu-multi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/logicutils/logicutils"

[workspace.dependencies]
lu-common = { path = "lu-common" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
blake3 = "1.8"
crc32fast = "1.5"
crc = "3"
toml = "1.1"
csv = "1.4"
thiserror = "2.0"
glob = "0.3.3"

[profile.release]
lto = "thin"