[package]
name = "lu-deps"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dependency graph analysis and transformation for logicutils"

[dependencies]
lu-common = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
