[package]
name = "lu-query"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Logic knowledge base query engine for logicutils"

[dependencies]
lu-common = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
