[package]
name = "stamp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File content signature management for logicutils"

[dependencies]
lu-common = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
